// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LoginForm with error 1`] = `
<form
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="ui segment"
  >
    <div
      className="field"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Login
      </div>
      <div
        className="ui input"
      >
        <input
          onChange={[Function]}
          placeholder="Login"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Password
      </div>
      <input
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <div
      className="ui negative message"
    >
      <p>
        Invalid credentials
      </p>
    </div>
    <button
      className="ui fluid primary button"
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </div>
</form>
`;

exports[`renders LoginForm with loading 1`] = `
<form
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="ui segment"
  >
    <div
      className="field"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Login
      </div>
      <div
        className="ui input"
      >
        <input
          onChange={[Function]}
          placeholder="Login"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Password
      </div>
      <input
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      className="ui fluid loading primary button"
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </div>
</form>
`;

exports[`renders LoginForm without crashing 1`] = `
<form
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="ui segment"
  >
    <div
      className="field"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Login
      </div>
      <div
        className="ui input"
      >
        <input
          onChange={[Function]}
          placeholder="Login"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Password
      </div>
      <input
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      className="ui fluid primary button"
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </div>
</form>
`;
